# AmritaSense

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  POLICY_OF_AIGC  README.md  benchmark.py  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  future-request.yml  question.yml
.github/workflows/: CI.yml
demos/: 01_minimal.py  02_composition.py  03_dependency_injection.py  04_if_branch.py  05_while_loop.py  06_try_catch.py  07_goto_call.py  08_interrupt_suspend.py  09_interrupt_notice.py  10_event_base.py  11_event_trigger.py  12_inline_workflow.py  13_ret_far.py  14_self_compile.py  15_step_by.py  16_subgraph_isolation.py  17_unsafe_flags.py  18_context_stack.py  19_interrupt_into.py  20_batch_run.py  21_debug_repl.py
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/styles/: palette.scss
docs/.vitepress/theme/: custom.css  index.ts  var.css
docs/guide/: appendix.md
docs/guide/advanced/: child_node.md  (+7 more)
docs/public/: robots.txt
docs/zh/: index.md
scripts/: benchmark.sh  ci.sh  docs-build.sh  docs-dev.sh  docs-init.sh  init-env.sh  lint.sh  test-cov.sh  test.sh
src/amrita_sense/: __init__.py  _unsafe.py  exceptions.py  logging.py  streaming.py  types.py  utils.py  weakcache.py
tests/: conftest.py  test_alias.py  test_core_nodes.py  test_debugger.py  test_deps_extra.py  test_di_cache.py  test_exceptions.py  test_func_block.py  test_if_extra.py  test_interrupt.py  test_jump_extra.py  test_loop_extra.py  test_matcher.py  test_object_stream.py  test_ret2.py  test_runtime.py  test_trigger_event.py  test_try_extra.py  test_types.py  test_unsafe.py  test_weakcache.py  test_workfl_ctrl.py
(+97 files in other folders)
