[project]
name = "amrita-sense"
version = "0.4.6.1"
description = "Next-Gen event stream and workflow engine."
readme = "README.md"
requires-python = ">=3.10, <3.16"
dependencies = [
    "aiologic>=0.16.0",
    "anyio>=4.13.0",
    "cachetools>=7.1.4",
    "exceptiongroup>=1.3.1",
    "loguru>=0.7.3",
]
[project.urls]
"Homepage" = "https://github.com/AmritaBot/AmritaSense"
"Source" = "https://github.com/AmritaBot/AmritaSense"
"Issue Tracker" = "https://github.com/AmritaBot/AmritaSense/issues"

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.8",
    "pytest>=8.4.1",
    "py-spy>=0.4.1",
    "pyright>=1.1.407",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "snakeviz>=2.2.2",
]
package = true

[tool.ruff]
line-length = 88
target-version = "py310"
[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
    "I",     # isort
    "PERF",  # pylint-performance
]
ignore = [
    "E501",   # line-too-long
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]
[tool.ruff.lint.per-file-ignores]
"demos/*.py" = ["ASYNC250"]
"tests/*.py" = ["ASYNC250", "PERF401"]

[tool.pyright]
typeCheckingMode = "standard"
